<!-- ! Excerpted from "The Cucumber for Java Book", ! published by The Pragmatic 
	Bookshelf. ! Copyrights apply to this code. It may not be used to create 
	training material, ! courses, books, articles, and the like. Contact us if 
	you are in doubt. ! We make no guarantees that this code is fit for any purpose. 
	! Visit http://www.pragmaticprogrammer.com/titles/srjcuc for more book information. -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>uk.co.claysnow</groupId>
	<version>1.0</version>
	<packaging>jar</packaging>
	<name>Cucumber-JVM Book ATM Example</name>
	<artifactId>atm-spring-example</artifactId>

	<properties>
		<activejdbc.version>1.4.11</activejdbc.version>
		<cucumber.version>1.2.4</cucumber.version>
		<dbh2.version>1.4.191</dbh2.version>
		<jetty.version>9.3.6.v20151106</jetty.version>
		<junit.version>4.12</junit.version>
		<liquibase.version>3.4.2</liquibase.version>
		<maven.compiler>3.5</maven.compiler>
		<mysql.version>5.1.38</mysql.version>
		<picocontainer.version>2.15</picocontainer.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<selenium.version>2.49.0</selenium.version>
		<servlet.version>3.0.1</servlet.version>
		<slf4j.version>1.7.13</slf4j.version>
		<spring.version>4.2.4.RELEASE</spring.version>
		<surefire.version>2.19.1</surefire.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-junit</artifactId>
			<version>${cucumber.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-spring</artifactId>
			<version>${cucumber.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-jdbc</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<version>${spring.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.eclipse.jetty</groupId>
			<artifactId>jetty-webapp</artifactId>
			<version>${jetty.version}</version>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-server</artifactId>
			<version>${selenium.version}</version>
		</dependency>
		<dependency>
			<groupId>org.javalite</groupId>
			<artifactId>activejdbc</artifactId>
			<version>${activejdbc.version}</version>
		</dependency>
		<!-- 
		<dependency> 
			<groupId>mysql</groupId> 
			<artifactId>mysql-connector-java</artifactId> 
			<version>${mysql.version}</version> 
		</dependency> -->
		<!-- H2 DB -->
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<version>${dbh2.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-nop</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven.compiler}</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${surefire.version}</version>
				<configuration>
					<argLine>-Duser.language=en</argLine>
					<argLine>-Xmx1024m</argLine>
					<argLine>-XX:MaxPermSize=256m</argLine>
					<argLine>-Dfile.encoding=UTF-8</argLine>
					<useFile>false</useFile>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.javalite</groupId>
				<artifactId>activejdbc-instrumentation</artifactId>
				<version>${activejdbc.version}</version>
				<executions>
					<execution>
						<phase>process-classes</phase>
						<goals>
							<goal>instrument</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.liquibase</groupId>
				<artifactId>liquibase-maven-plugin</artifactId>
				<version>${liquibase.version}</version>
				<configuration>
					<changeLogFile>src/main/resources/bank_schema.xml</changeLogFile>
					<!-- 
					<driver>com.mysql.jdbc.Driver</driver> 
					<url>jdbc:mysql://localhost/bank</url> 
					<username>teller</username>
					<password>password</password>
					-->
					<driver>org.h2.Driver</driver>
					<url>jdbc:h2:~/bank</url>
					<username>sa</username>
					<password>sa</password>
				</configuration>
				<executions>
					<execution>
						<phase>process-resources</phase>
						<goals>
							<goal>update</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>
